[gd_scene load_steps=6 format=3 uid="uid://b1xityx8ekvxp"]

[ext_resource type="Texture2D" uid="uid://b286g0wqr5i4q" path="res://assets/images/ui/icons/icon_satchel_16x16_rendered.png" id="1_naos6"]
[ext_resource type="Texture2D" uid="uid://cndwc6ortvvmo" path="res://assets/images/ui/icons/icon_skilltree_16x16_rendered.png" id="2_n3gq2"]
[ext_resource type="Script" path="res://ui/TextureButton.gd" id="2_qb2py"]
[ext_resource type="Texture2D" uid="uid://bjgl5qnafojwh" path="res://assets/images/ui/icons/icon_crafting_16x16_rendered.png" id="4_doweq"]
[ext_resource type="PackedScene" uid="uid://bl31bdg224lpp" path="res://ui/BackpackWindow.tscn" id="5_feeal"]

[node name="GameHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IGNORE THIS ITS TO FIX ISSUE #58314" type="Label" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 189.0
offset_right = 305.0
offset_bottom = 212.0
text = " "

[node name="HotbarAction" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.841
anchor_right = 0.5
anchor_bottom = 0.841
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackpackWindow" parent="." instance=ExtResource("5_feeal")]
visible = false
layout_mode = 1

[node name="MenuOptions" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Satchel" type="Button" parent="MenuOptions"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -90.0
offset_right = 45.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_qb2py")

[node name="TextureRect" type="TextureRect" parent="MenuOptions/Satchel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_naos6")

[node name="Skill Tree" type="Button" parent="MenuOptions"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.57
anchor_top = 1.0
anchor_right = 0.57
anchor_bottom = 1.0
offset_left = 41.8
offset_top = -90.0
offset_right = 131.8
grow_horizontal = 2
grow_vertical = 0
action_mode = 0
script = ExtResource("2_qb2py")

[node name="TextureRect" type="TextureRect" parent="MenuOptions/Skill Tree"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n3gq2")

[node name="Crafting" type="Button" parent="MenuOptions"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43
anchor_top = 1.0
anchor_right = 0.43
anchor_bottom = 1.0
offset_left = -131.8
offset_top = -90.0
offset_right = -41.8
grow_horizontal = 2
grow_vertical = 0
action_mode = 0
script = ExtResource("2_qb2py")

[node name="TextureRect" type="TextureRect" parent="MenuOptions/Crafting"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_doweq")

[connection signal="mouse_entered" from="MenuOptions/Satchel" to="MenuOptions/Satchel" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MenuOptions/Satchel" to="MenuOptions/Satchel" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MenuOptions/Skill Tree" to="MenuOptions/Skill Tree" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MenuOptions/Skill Tree" to="MenuOptions/Skill Tree" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MenuOptions/Crafting" to="MenuOptions/Crafting" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MenuOptions/Crafting" to="MenuOptions/Crafting" method="_on_mouse_exited"]
